   - The LRP option 'centralize_routing' has been removed. The behavior is now
     enabled in all cases where it is needed.
   - The experimental logical router port options "routing-protocol-redirect"
     and "routing-protocols" are now also usable on distributed gateway ports.
   - ovn-nb: Changed schema of ovn-nb to make networks optional within Logical
     Router Ports.

OVN v24.09.0 - 13 Sep 2024
--------------------------
  - Added a new logical switch port option "pkt_clone_type".
    If the value is set to "mc_unknown", packets destined to the port gets
    cloned to all unknown ports connected to the same Logical Switch.
  - Added a new logical switch port option "disable_arp_nd_rsp" to
    disable adding the ARP responder flows if set to true.
  - IGMP_Group has new "protocol" column that displays the the group
    protocol version.
  - Add ovn-debug tool containing two commands.
    "lflow-stage-to-ltable STAGE_NAME" that converts stage name into logical
    flow table id.
    "lflow-stage-to-oftable STAGE_NAME" that converts stage name into OpenFlow
    table id.
  - Rename the ovs-sandbox script to ovn-sandbox.
  - Remove "ovn-set-local-ip" config option from vswitchd
    external-ids, the option is no longer needed as it became effectively
    "true" for all scenarios.
  - Added DHCPv4 relay support.
  - A new LSP option "force_fdb_lookup" has been added to ensure the additional
    MAC addresses configured on the LSP with "unknown", are learnt via the
    OVN native FDB.
  - Add support for ovsdb-server `--config-file` option in ovn-ctl.
  - Add "ovn-bridge-remote" config option to vswitchd external-ids,
    that allows to specify connection method to management bridge for
    ovn-controller, defaulting to the unix socket.
  - Add "ovn-bridge-remote-probe-interval" config option to vswitchd
    external-ids, that sets probe interval for integration bridge connection,
    disabled by default.